--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
 <body>
     <header>
         <h1>i want to be a new design menber in the future</h1>
+        <ul class="list">
+            <li>朝練は欠かさない</li>
+            <li>きちんと目標の確認をする</li>
+            <li>自分の性格にあった持続可能な最短の勉強法で</li>
+        </ul>
     </header>
 </body>
 </html>
