--- a/index.html
+++ b/index.html
@@ -6,13 +6,36 @@
     <title>Document</title>
 </head>
 <body>
-    <header>
-        <h1>i want to be a new design menber in the future</h1>
-        <ul class="list">
-            <li>朝練は欠かさない</li>
-            <li>きちんと目標の確認をする</li>
-            <li>自分の性格にあった持続可能な最短の勉強法で</li>
-        </ul>
+    <header class="header">
+        <div class="content_wrapper header_nav">
+
+        </div>
     </header>
+    <section class="mainvisual">
+
+    </section>
+    <main>
+    <section class="greeting">
+        <div class="content_wrapper">
+
+        </div>
+    </section>
+    <section class="work">
+        <div class="content_wrapper">
+
+        </div>
+    </section>
+    <section class="news">
+        <div class="content_wrapper">
+        </div>
+    </section>
+    <section class="recruit">
+
+    </section>
+    </main>
+    <footer class="footer">
+        <div class="content_wrapper">
+        </div>
+    </footer>
 </body>
 </html>
